--- a/src/BookingService.Api/appsettings.json
+++ b/src/BookingService.Api/appsettings.json
@@ -9,6 +9,10 @@
   },
   "AllowedHosts": "*",
   "Cors": {
-    "AllowedOrigins": ["http://localhost:3000"]
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "https://appointments-booking-rso-dev.vercel.app",
+      "https://appointments-booking-rso.vercel.app"
+    ]
   }
 }
